App header fixes (#9343)
This fixes several issues the app header was experiencing on mobile and tablet screen sizes;

* The project name was overlapping with the search icon, especially for long names. It will now get dotted out
* The logo was being shown on screens that were really too small for it, causing the header to overflow and more important elements to lack space
* The main menu toggle was being shown on pages that did do not have a main menu
* Some refactoring around the global search input css by making it more bemmy, reducing class specificity
* Improved the design of the search button on mobile, making it more in line with the other buttons

--- a/frontend/src/global_styles/content/menus/_project_autocompletion.sass
+++ b/frontend/src/global_styles/content/menus/_project_autocompletion.sass
@@ -62,7 +62,7 @@
     background: var(--header-drop-down-projects-search-input-bg-color)
 
     @include breakpoint(680px down)
-      margin-left: 0px
+      margin: 0 auto
       width: calc(100% - 35px)
 
   // Lens icon on the right
